--- a/siteRobo/templates/index.html
+++ b/siteRobo/templates/index.html
@@ -16,6 +16,7 @@
     <div id="links">
         <a href="/controle/"><h3>Controle</h3></a>
         <a href="/power/"><h3>Power</h3></a>
+        <a href="/mapa/"><h3>Mapa</h3></a>
       </div>
     <div id="footer">
         <p>Made by Robota</p>
