--- a/siteRobo/templates/power.html
+++ b/siteRobo/templates/power.html
@@ -15,7 +15,7 @@
     </div>
     <div id="middle">
         <form>
-          <button type = "button" id="power" onclick="move_forward()"><img src="/static/images/poweroff.svg"></button>
+          <button type = "button" id="power" onclick="stop_car()"><img src="/static/images/poweroff.svg"></button>
         </form>
       </div>
     <div id="footer">
