--- a/siteRobo/templates/power.html
+++ b/siteRobo/templates/power.html
@@ -11,11 +11,15 @@
   <body>
     <div id="header">
       <h1>robota</h1>
-  	  <h2>Botão de Parada</h2>
+  	  <h2>Start Car</h2>
     </div>
     <div id="middle">
         <form>
-          <button type = "button" id="power" onclick="stop_car()"><img src="/static/images/poweroff.svg"></button>
+          <button type = "button" id="power" onclick="start_car()"><img src="/static/images/power.svg"></button>
+        </form>
+        <h2>Stop Car</h2>
+        <form>
+          <button type = "button" id="power" onclick="stop_car()"><img src="/static/images/stop.svg"></button>
         </form>
       </div>
     <div id="footer">
