codigo site motores atualizado

--- a/siteRobo/templates/controle.html
+++ b/siteRobo/templates/controle.html
@@ -19,7 +19,7 @@
       </div>
       <div id="middle">
         <form><button type = "button" id="arrows" onclick="move_left_car()"><img src="/static/images/arrowleft.svg"></button></form>
-        <form><button type = "button" id="arrows" onclick="stop_car()"><img src="/static/images/poweroff.svg"></button></form>
+        <form><button type = "button" id="arrows" onclick="stop_car()"><img src="/static/images/stop.svg"></button></form>
         <form><button type = "button" id="arrows" onclick="move_right_car()"><img src="/static/images/arrowright.svg"></button></form>
       </div>
       <div id="bottom">
