--- a/siteRobo/static/styles/powerstyle.css
+++ b/siteRobo/static/styles/powerstyle.css
@@ -1,20 +1,21 @@
 @font-face {
     font-family: "lustraMedium";
     src: url('/static/fonts/lustra-text-medium.ttf') format('truetype');
-  }
+}
 
 body {
     min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(to right, purple , orange);
+    background-image: linear-gradient(to right, purple, orange);
 }
 
 #header {
-    background-image: linear-gradient(to right, purple , orange);
+    background-image: linear-gradient(to right, purple, orange);
 }
-#header > h1 {
+
+h1 {
     margin: 0px;
     color: rgb(255, 255, 255);
     font-size: 72px;
@@ -25,7 +26,7 @@ body {
     text-align: center;
 }
 
-#header > h2 {
+h2 {
     margin: 0px;
     color: rgb(255, 255, 255);
     font-size: 32px;
@@ -35,6 +36,7 @@ body {
     text-align: center;
     margin-top: 25px;
 }
+
 #middle {
     margin: 50px;
     display: flex;
@@ -42,6 +44,7 @@ body {
     align-items: center;
     font-size: 0;
 }
+
 #power {
     height: 250px;
     width: 250px;
@@ -49,9 +52,9 @@ body {
     border: none;
 }
 
-#power > img{
+#power>img {
     height: 250px;
-    width:250px;
+    width: 250px;
 }
 
 #footer {
@@ -61,7 +64,7 @@ body {
     gap: 8px;
 }
 
-#footer > p {
+#footer>p {
     font-size: 22px;
     color: rgb(255, 255, 255);
     font-family: "lustraMedium";
